# orange-pi-spotify-vinyl-panel

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
config/: spotify-panel.env.example
docs/: installation.md  orange-pi-audio.md  troubleshooting.md
scripts/: spotify-event.sh
src/vinyl_panel/: __init__.py  event_hook.py  paths.py  server.py  state.py
systemd/: librespot.service  spotify-panel.service
tests/: test_event_hook.py
web/: app.js  index.html  player.css  styles.css  vinyl-performance.css
