[project]
name = "orange-pi-spotify-vinyl-panel"
version = "0.1.0"
description = "Spotify Connect now-playing vinyl-style panel for Orange Pi"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MiyazakiTakara" }]
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
